Fixing field styles on iOS.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -102,8 +102,7 @@
 
 #field {
   box-sizing: content-box;
-  line-height: 10px;
-  font-size: 14px;
+  line-height: 9px;
   text-align: center;
 
   > div {
